k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cardme
  name: cardme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cardme
  strategy: {}
  template:
    metadata:
      labels:
        app: cardme
    spec:
      volumes:
      - name: vol
        emptyDir: {}
      containers:
      - args:
        - make
        - s
        image: chihiro1129yabuta/cardme:server
        name: server
        volumeMounts:
          - name: vol
            mountPath: cardme
        tty: true
        ports:
        - containerPort: 8080
        resources: {}
        workingDir: /cardme
status: {}
