k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cardme
  name: cardme
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8080
  selector:
    app: cardme
  type: LoadBalancer
status:
  loadBalancer: {}
