k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cardme
spec:
  rules:
  - host: 4card.me
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: cardme
            port:
              number: 8080
